--- a/style-form.css
+++ b/style-form.css
@@ -2,35 +2,61 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
 
 body {
-    font-family: "Inter", serif;
-    height: 100vh;
+    margin: 0px;
+    font-family: "Jost", serif;
+}
+
+/* form {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 20px;
-}
+} */
 
 .form {
+    margin-top: 120px;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 20px;
+    width: 100%;
 }
 
-.form_1 {
+form {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 400px;
+}
+
+label {
+    text-align: center;
+    font-size: 20px;
 }
 
 input, select {
     margin: 20px 10px;
-    width: 100%;
+    width: 240px;
+    padding: 10px;
+    border: 1px solid black;
+    border-radius: 8px;
+}
+
+select {
+    width: 262px;
+}
+
+input:focus, select:focus {
+    border-color: #42B2FC;
+    outline: none;
 }
 
 button {
     text-decoration: none;
-    padding: 2px;
+    font-size: 16px;
+    padding: 10px 20px;
+    width: 262px;
+    margin-top: 10px;
     background-color: #42B2FC;
     border: 1px solid #42B2FC;
     color: white;  
@@ -48,13 +74,67 @@ button:active {
     color: black;
 }
 
-fieldset {
-    border: 4px solid #42B2FC;
-    border-radius: 10px;
-}
-
 ::placeholder {
     color: rgba(0, 0, 0, 0.408);
     font-style: italic;
-    font-family: "Inter", serif;
+    font-size: 14px;
+}
+
+.header {
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    top: 0px;
+    height: 78px;
+}
+
+.head-text {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-left: 96px;
+    gap: 600px;
+}
+
+.name {
+    color: #42B2FC;
+    font-weight: weight;
+    font-size: 36px;
+}
+
+.head > ul {
+    list-style-type: none;
+    padding: 0px;
+}
+
+li {
+    display: inline;
+    margin-right: 29px;
+    font-size: 18px;
+}
+
+.choose {
+    text-decoration: none;
+    padding: 2px;
+    background-color: #42B2FC;
+    border: 1px solid #42B2FC;
+    color: white;  
+    border-radius: 4px;
+    transition: background-color 0.4s, color 0.4s;
+}
+
+.choose:hover {
+    color: #42B2FC;
+    background-color: white;
+}
+
+.enter {
+    text-decoration: none;
+    transition: background-color 0.4s, color 0.4s;
+}
+
+.enter:hover {
+    color: rgba(0, 0, 0, 0.408);
 }
