--- a/style.css
+++ b/style.css
@@ -172,6 +172,14 @@ hr {
     margin: 0px;
 }
 
+.advant {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    padding-bottom: 60px;
+}
+
 .advant > h4 {
     background-color: white;
     margin: 0px;
@@ -192,6 +200,7 @@ hr {
     background-color: white;
     text-align: center;
     padding: 0px 250px;
+    padding-bottom: 50px;
     display: grid;
     grid-template-columns: repeat(3, 274px);
     grid-template-rows: repeat(2, 256px);
@@ -203,4 +212,65 @@ hr {
 
 .advant-grid img {
     width: 200px;
+}
+
+.choose_3 {
+    text-decoration: none;
+    font-family: "Jost", serif;
+    font-size: 20px;
+    padding: 10px 40px;
+    margin-top: 40px;
+    width: 280px;
+    background-color: #42B2FC;
+    border: 2px solid #42B2FC;
+    color: white;  
+    border-radius: 8px;
+    transition: background-color 0.4s, color 0.4s;
+}
+
+.choose_3:hover {
+    color: #42B2FC;
+    background-color: white;
+}
+
+.video {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.video > h4 {
+    margin: 0px;
+    padding-top: 90px;
+    padding-bottom: 90px;
+    text-align: center;
+    font-family: "Inter", serif;
+    font-size: 64px;
+}
+
+.basement {
+    font-family: "Jost", serif;
+    display: flex;
+    justify-content: center;
+    margin-top: 200px;
+}
+
+.basement-flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
+    background-color: white;
+    border: 1px solid white;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
+    color: #8497A6;
+    width: 1100px;
+    height: 200px;
+}
+
+.basement-main-text {
+    color: #345066;
 }
